<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
    >
        <android.support.v7.widget.Toolbar
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:id="@+id/toolbar"
        />
        <LinearLayout
                android:orientation="vertical"
                android:layout_margin="30dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
        <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/face"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:id="@+id/userImage"
                android:layout_marginTop="16dp"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titlePersonalInfo"
                android:gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                android:textSize="20dp"
                android:id="@+id/userNameTitle"
        />
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hintUserSex"
            />
            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sex"
            />
        </LinearLayout>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:hint="@string/hintuserName"
                android:inputType="text"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/age"
                android:hint="@string/hintUserAge"
                android:inputType="number"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:hint="@string/hintUserEmail"
                android:inputType="textEmailAddress"
        />
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
        >
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_userSave"
                    android:id="@+id/saveInfo"
            />
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_preCancel"
                    android:id="@+id/cancelInfo"
            />
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>